test/parser/function_call.error.5.err
EXPECTED_RPAREN[1012] in test/parser/function_call.error.5.pytch, line 7, character 15:
Error: I was expecting a ')' to indicate the end of this function argument
list, but instead got the end of the file.
   +--------------------------------------------------------------------------+
   | test/parser/function_call.error.5.pytch                                  |
 1 | print(                                                                   |
   |      ^ Note: The beginning of the argument list is here.                 |
 2 |   1,                                                                     |
   +--------------------------------------------------------------------------+
 6 |           5,                                                             |
 7 |             6,                                                           |
   |               ^ Error: I was expecting a ')' to indicate the end of this |
   | function argument list, but instead got the end of the file.             |
   +--------------------------------------------------------------------------+
